[project]
name = "aaltoes-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "datasets>=3.5.0",
    "google-api-python-client>=2.167.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "gradio>=5.23.1",
    "langchain>=0.3.21",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.3",
    "langchain-huggingface>=0.1.2",
    "litellm>=1.65.0",
    "mcp[cli]>=1.6.0",
    "smolagents[mcp]>=1.12.0",
]

[tool.uv.workspace]
members = ["help"]
